# G4ComptonCamera

./: .gitignore  CMakeLists.txt  Makefile  README.md  Source_sim_biased_109.txt  anode_w.mac  cmake_install.cmake  cone_intersection.py  run.mac  sim.cc  simulation2ascii.py  source_sim_5108.txt  vis.mac  xray-Anode_W-19deg_Glass_35kV_50M.txt
Cone_Intersection/: Angle_Error.ipynb  Cone_Class.py  Cone_Intersection.py  Cone_surface.py  Pseudocode_Cone_Intersection.txt  Read_File.py  Result_Reco_Algorithm.txt  cone_3D.py  cone_intersection.py  cone_try.py  event_2D.py  event_2D_old.py  read_root.py  useful_functions.py
Headers/: construction.hh  generator.hh  physics.hh
Results/: validation.root
Results/Absorber_Thickness/: Study_of_Absorber_Thickness.ipynb
Results/Validation/: Compton_Efficiency.ipynb  Cross_Check_Compton.ipynb  Cross_Check_biasing.ipynb  ElectronLength.ipynb  Presentation_Validation.ipynb  Presentation_Validation.slides.html  SiC_analysis.ipynb  Validation1_Results.ipynb.ipynb  Validation2_Results.ipynb  Validation3_Results.ipynb  Validation4_Results.ipynb  Validation5_Results.ipynb  Validation9.ipynb  ValidationGalactic.ipynb  Validation_7.ipynb  Validation_Results.ipynb  (+2 more)
Source/: construction.cc  generator.cc  sim.cc
include/: action.hh  change_cross_section.hh  construction.hh  detector.hh  event.hh  generator.hh  lgadSD.hh  lgadhit.hh  phantomHit.hh  phantomSD.hh  physics.hh  run.hh  stepping.hh
src/: action.cc  change_cross_section.cc  construction.cc  detector.cc  event.cc  generator.cc  lgadSD.cc  lgadhit.cc  phantomHit.cc  phantomSD.cc  physics.cc  run.cc  sim.cc  stepping.cc
(+3 files in other folders)
